--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -195,7 +195,7 @@ section,
 
 .project-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(1fr, 250px));
     grid-gap: 30px;
 }
@@ -307,5 +307,9 @@ section,
     }
     .project-content {
         transform: scale(1);
+    }
+    .pg-title {
+        font-size: 50px;
+        font-weight: 700;
     }
 }
