--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -399,6 +399,11 @@ section,
         justify-content: center;
         text-align: center;
     }
+    .contact-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 2fr));
+        text-align: center;
+    }
 }
 
 #for-project,
