--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -159,7 +159,7 @@ section,
         text-shadow: none
     }
     section {
-        margin-bottom: 0px;
+        padding-bottom: 10px;
     }
 }
 
